force-app/main/default/objects/Detalle_de_factura__c/Detalle_de_factura__c.object-meta.xml
<CustomObject>
    <label>Detalle de factura</label>
    <nameField>
        <label>Detalle de factura Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detalles de facturas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>