force-app/main/default/objects/Detalle_de_factura__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <description>Relacion entre detalles de factura y factura . Para aplicacion de facturacion.</description>
    <label>Factura</label>
    <referenceTo>Factura__c</referenceTo>
    <relationshipLabel>Detalles de facturas</relationshipLabel>
    <relationshipName>Detalles_de_facturas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>