force-app/main/default/objects/Detalle_de_factura__c/fields/imageProduct__c.field-meta.xml
<CustomField>
    <fullName>imageProduct__c</fullName>
    <label>imageProduct</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>