force-app/main/default/objects/Detalle_de_factura__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacion entre producto y detalle de factura.</description>
    <label>Producto</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipLabel>Detalles de facturas</relationshipLabel>
    <relationshipName>Detalles_de_facturas</relationshipName>
    <type>Lookup</type>
</CustomField>